# symtex

./: .gitignore  Cargo.toml  PROJECT-SUMMARY.md  README.md  docker-compose.yml  verify-build.sh
.github/workflows/: ci.yml
crates/api/: Cargo.toml  build.rs
crates/api/proto/v1/: simulation.proto
crates/api/src/: lib.rs
crates/holographic-viewer/: Cargo.toml
crates/holographic-viewer/shaders/: crt.wgsl  debug_vis.wgsl  edl.wgsl  hypc_points.wgsl  rgbshift.wgsl  sem_post.wgsl
crates/holographic-viewer/src/: app.rs  camera.rs  lib.rs  main.rs  net.rs  render.rs  ui.rs
crates/holographic-viewer/src/data/: mod.rs  point_cloud.rs  types.rs
crates/holographic-viewer/src/math/: mod.rs
crates/holographic-viewer/src/renderer/: context.rs  mod.rs  targets.rs
crates/holographic-viewer/src/renderer/pipelines/: ground_grid.rs  hologram.rs  mod.rs  post_stack.rs
crates/hypc/: Cargo.toml
crates/hypc/src/: lib.rs
crates/link_emulator/: Cargo.toml
crates/link_emulator/src/: main.rs  metrics.rs
crates/obj2hypc/: Cargo.toml
crates/obj2hypc/src/: main.rs
crates/sim_agent/: Cargo.toml
crates/sim_agent/src/: communication.rs  config.rs  main.rs  metrics.rs  perception.rs  shader.wgsl  state.rs
crates/sim_orchestrator/: Cargo.toml
crates/sim_orchestrator/src/: agent_manager.rs  flight.rs  grpc.rs  main.rs  metrics.rs  state.rs  tasking.rs
docker/: emulator.Dockerfile  orchestrator.Dockerfile
grafana/provisioning/dashboards/: dashboards.yml
prometheus/: prometheus.yml
specs/: all.md  api.md  holographic_viewer.md  link_emulator.md  sim_agent.md  sim_orchestrator.md
