[package]
name = "holographic_viewer"
version = "0.2.0"
edition = "2021"

[dependencies]
# Core GPU / windowing
wgpu = "0.20"
winit = "0.29"
pollster = "0.3"

# Math & POD
glam = { version = "0.28", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }

# UI
egui = "0.28"
egui-wgpu = "0.28"
egui-winit = "0.28"

# Asset loading
walkdir = "2.5"

# Utils
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"

# Local format library
hypc = { path = "../hypc" }
