[package]
name = "obj2hypc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rayon = "1.8"
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# For optional semantic mask generation from OSM
osmpbf = "0.3"
rstar = "0.11"
smallvec = "1.11"
hashbrown = "0.14"
nohash-hasher = "0.2"

# For optional feature index
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Our new, local, dependency-free format library
hypc = { path = "../hypc" }
