[package]
name = "sim_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
bytes = "1"
roaring = "0.10"
uuid = { version = "1", features = ["v4"] }
nalgebra = "0.33"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"
axum = "0.7"
chrono = "0.4"
anyhow = "1.0"
rand = "0.8"
